[package]
name = "tile_sorcerer"
version = "1.3.0"
authors = ["Ian Wagner <ian@stadiamaps.com>", "Luke Seelenbinder <luke@stadiamaps.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/stadiamaps/tile_sorcerer"
readme = "README.md"
description = "Tools for modeling and querying vector tile sources"
categories = ["parser-implementations", "database", "science"]
keywords = ["gis", "vector", "map", "tiles", "mvt"]
edition = "2021"

[dependencies]
once_cell = "1.8"
serde_yaml = "0.9"
thiserror = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.sqlx]
version = "0.8.0"
default-features = false
features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"]

[dev-dependencies]
assert_approx_eq = "1.1"
